--- a/page-1.html
+++ b/page-1.html
@@ -364,7 +364,7 @@
                 </div>
                 <h1 class="titlee">Snake Game</h1>
                 <p class="text">A popular basic snake game <br> Created using AWT ,Swing api's in Eclipse </p>
-                <a href="#" class="cta">Get source code</a>
+                <a href="https://github.com/anilkumar2224/Snake-Game" class="cta">Get source code</a>
             </div>
            
             
