--- a/page-1.html
+++ b/page-1.html
@@ -363,8 +363,8 @@
                     <span>Sep,2020</span>
                 </div>
                 <h1 class="titlee">Snake Game</h1>
-                <p class="text">A popular basic snake game <br> Created using AWT ,Swing api's in Eclipse </p>
-                <a href="https://github.com/anilkumar2224/Snake-Game" class="cta">Get source code</a>
+                <p class="text">A popular basic snake game <br> Created using JavaScript </p>
+                <a href="https://anilkumar2224.github.io/SnakeGame/" class="cta">Get source code</a>
             </div>
            
             
