--- a/page-1.html
+++ b/page-1.html
@@ -416,8 +416,8 @@
     <div class="mat">
        
        
-        <p class="textt">1)A popular basic snake game <br>2)Created using AWT , Swing api's in Eclipse </p>
-        <a href="#" class="cta">Get source code</a>
+        <p class="textt">1)A popular basic snake game <br>2)Created using Html canvas & Javascript </p>
+        <a href="#" class="cta">LINK</a>
     </div>
 </div>
 </div>
