--- a/page-1.html
+++ b/page-1.html
@@ -417,7 +417,7 @@
        
        
         <p class="textt">1)A popular basic snake game <br>2)Created using Html canvas & Javascript </p>
-        <a href="#" class="cta">LINK</a>
+        <a href="https://anilkumar2224.github.io/SnakeGame/" class="cta">LINK</a>
     </div>
 </div>
 </div>
