--- a/page-1.html
+++ b/page-1.html
@@ -148,7 +148,7 @@
 
                 </div>
                 <div class="moto">
-                    <p><b>I am Anil Kumar,undergraduate at IIT Bhubaneswar.I have grate skills in Front-end Web development and Software Development.I will create advanced web appilications as well as andriod apps</b></p>
+                    <p><b>I am Anil Kumar,undergraduate at IIT Bhubaneswar.I have great skills in Front-end Web development and Software Development.I will create advanced web appilications as well as andriod apps</b></p>
         
                        <p><b>I am very much fascinated towards new Technologies.And My intrest among all new Advanced technologies is beyond any expectations.My moto towards my techincal life is that "Education is not the learning of facts, but the training of mind to think" </b></p>
                 </div>
