--- a/page-1.html
+++ b/page-1.html
@@ -157,9 +157,9 @@
 </div>
 
         
-    </section>
+<!--     </section> -->
    
-    <section class="Education">
+<!--     <section class="Education"> -->
        
         <div class="tit"><h1>Education</h1></div> 
         <div class="wrap">
