--- a/page-1.html
+++ b/page-1.html
@@ -333,9 +333,9 @@
             </li>
         </ul>
        
-<!--     </section> -->
+    </section>
     <!-- projects-->
-<!--    <section class="projects" id="projects"> -->
+   <section class="projects" id="projects">
         <div class="tit1">Projects</div>
         <div class="ssp"></div>
         <div class="blog-post">
