--- a/page-1.html
+++ b/page-1.html
@@ -266,7 +266,8 @@
    
     </section>
    <!-- Skills-->
-    <section class="skill" id="skill">
+		<section class="projects" id="projects">
+<!--     <section class="skill" id="skill"> -->
         <div class="tit1">Skills</div>
         <ul class="honeycomb">
             <li class="honeycomb-cell">
@@ -333,9 +334,9 @@
             </li>
         </ul>
        
-    </section>
+<!--     </section> -->
     <!-- projects-->
-   <section class="projects" id="projects">
+<!--    <section class="projects" id="projects"> -->
         <div class="tit1">Projects</div>
         <div class="ssp"></div>
         <div class="blog-post">
