--- a/page-1.html
+++ b/page-1.html
@@ -267,7 +267,7 @@
     </section>
    <!-- Skills-->
 		<section class="projects" id="projects">
-<!--     <section class="skill" id="skill"> -->
+    <section class="skill" id="skill">
         <div class="tit1">Skills</div>
         <ul class="honeycomb">
             <li class="honeycomb-cell">
@@ -334,7 +334,7 @@
             </li>
         </ul>
        
-<!--     </section> -->
+    </section>
     <!-- projects-->
 <!--    <section class="projects" id="projects"> -->
         <div class="tit1">Projects</div>
