--- a/page-1.html
+++ b/page-1.html
@@ -161,7 +161,7 @@
    
 <!--     <section class="Education"> -->
        
-        <div class="tit"><h1>Education</h1></div> 
+<!--         <div class="tit"><h1>Education</h1></div>  -->
         <div class="wrap">
             <div class="card1">
             <div><h2>B Tech</h2></div>
