--- a/page-1.html
+++ b/page-1.html
@@ -499,7 +499,7 @@
                 <div class="icon"><i class="fa fa-map-marker"></i></div>
                 <div class="text">
                     <h3>Address</h3>
-                    <p>H.no: 8-6-49, B.C .colony,<br> Gadwal,Telangana<br>509125</p>
+                    <p><br> Gadwal,Telangana<br>509125</p>
                 </div>
             </div>
             <div class="box">
