--- a/page-1.html
+++ b/page-1.html
@@ -518,7 +518,7 @@
             </div>
 
         </div>
-        <div class="cform">
+<!--         <div class="cform">
             <form id="contact-form" method="post" action="sendmail.php">
                 <h2>Send Message</h2>
                 <div class="inputbox">
@@ -538,7 +538,7 @@
                   
                 </div>
             </form>
-        </div>
+        </div> -->
     </div>
 </section>
     <section class="footer">
